# local-first-seo-auditor

./: AGENTS.md  FRD_251016_123823.txt  PRD_251016_122340.txt
backend/: README.md  pyproject.toml
backend/app/: config.py  db.py  dependencies.py  main.py  models.py  security.py
backend/app/repositories/: projects.py
backend/app/routes/: auth.py  health.py  projects.py
backend/tests/: conftest.py  helpers.py  test_projects.py  test_signature.py
