[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-first-seo-auditor-backend"
version = "0.1.0"
description = "FastAPI backend for the local-first SEO auditor"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Local-First SEO Auditor Team"}]
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn>=0.30.0,<0.31.0",
    "pydantic>=2.7.0,<3.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0,<0.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "ruff>=0.4.0,<0.5.0",
    "mypy>=1.10.0,<2.0.0",
    "types-requests"
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "strict"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
